@@ -5,20 +5,19 @@ import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
 import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.world.InteractionHand;
-import net.minecraft.world.InteractionResult;
+import net.minecraft.world.ItemInteractionResult;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.context.BlockPlaceContext;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.BaseEntityBlock;
 import net.minecraft.world.level.block.Block;
-import net.minecraft.world.level.block.SoundType;
 import net.minecraft.world.level.block.entity.BlockEntity;
 import net.minecraft.world.level.block.state.BlockBehaviour;
 import net.minecraft.world.level.block.state.BlockState;
-import net.minecraft.world.level.block.state.StateDefinition;
 import net.minecraft.world.level.block.state.properties.DirectionProperty;
 import net.minecraft.network.chat.Component;
 import net.minecraft.world.phys.BlockHitResult;
+import net.minecraft.world.phys.shapes.VoxelShape;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import xiao.battleroyale.block.entity.LootSpawnerBlockEntity;
@@ -32,16 +31,18 @@ import java.util.List;
 public class LootSpawner extends AbstractLootBlock {
     public static final MapCodec<LootSpawner> CODEC = simpleCodec(LootSpawner::new);
 
-    public static final DirectionProperty FACING = DirectionProperty.create("facing", Direction.NORTH, Direction.EAST, Direction.SOUTH, Direction.WEST);
+    private static final DirectionProperty THIS_FACING = DirectionProperty.create("facing", Direction.NORTH, Direction.EAST, Direction.SOUTH, Direction.WEST);
+    private static final VoxelShape THIS_SHAPE = Block.box(0, 0, 0, 16, 1, 16);
 
     public LootSpawner(BlockBehaviour.Properties properties) {
-        super(Properties.of()
-                .sound(SoundType.WOOD)
-                .strength(2.5F, 2.5F)
-                .noOcclusion()
-                .noCollission()
-        );
-        this.registerDefaultState(this.stateDefinition.any().setValue(FACING, Direction.NORTH));
+        super(properties);
+    }
+
+    @Override public DirectionProperty getFacingProperty() {
+        return THIS_FACING;
+    }
+    @Override public VoxelShape getBlockShape() {
+        return THIS_SHAPE;
     }
 
     @Override
@@ -51,12 +52,7 @@ public class LootSpawner extends AbstractLootBlock {
 
     @Override
     public BlockState getStateForPlacement(BlockPlaceContext context) {
-        return this.defaultBlockState().setValue(FACING, context.getHorizontalDirection().getOpposite());
-    }
-
-    @Override
-    protected void createBlockStateDefinition(StateDefinition.Builder<Block, BlockState> builder) {
-        builder.add(FACING);
+        return this.defaultBlockState().setValue(THIS_FACING, context.getHorizontalDirection().getOpposite());
     }
 
     @Nullable
@@ -66,7 +62,7 @@ public class LootSpawner extends AbstractLootBlock {
     }
 
     @Override
-    public @NotNull InteractionResult use(@NotNull BlockState state, @NotNull Level level, @NotNull BlockPos pos, @NotNull Player player, @NotNull InteractionHand hand, @NotNull BlockHitResult hit) {
+    public @NotNull ItemInteractionResult useLootBlock(@NotNull BlockState pState, @NotNull Level level, @NotNull BlockPos pos, @NotNull Player player, @NotNull InteractionHand pHand, @NotNull BlockHitResult pHit) {
         if (!level.isClientSide) {
             BlockEntity blockEntity = level.getBlockEntity(pos);
             if (blockEntity instanceof LootSpawnerBlockEntity lootSpawnerBlockEntity) {
@@ -75,10 +71,10 @@ public class LootSpawner extends AbstractLootBlock {
                     List<LootConfig> allConfigs = LootConfigManager.get().getConfigEntryList(LootConfigTypeEnum.LOOT_SPAWNER);
                     if (allConfigs == null || allConfigs.isEmpty()) {
                         player.sendSystemMessage(Component.translatable("battleroyale.message.no_loot_spawner_config_available"));
-                        return InteractionResult.SUCCESS;
+                        return ItemInteractionResult.SUCCESS;
                     }
 
-                    LootConfig nextConfig = allConfigs.get(0);
+                    LootConfig nextConfig = allConfigs.getFirst();
                     for (LootConfig config : allConfigs) {
                         if (config.getConfigId() > currentConfigId) {
                             nextConfig = config;
@@ -87,16 +83,18 @@ public class LootSpawner extends AbstractLootBlock {
                     }
                     lootSpawnerBlockEntity.setConfigId(nextConfig.getConfigId());
                     player.sendSystemMessage(Component.translatable("battleroyale.message.loot_spawner_lootid_switched", nextConfig.getConfigId(), nextConfig.name));
-                    return InteractionResult.SUCCESS;
+                    return ItemInteractionResult.SUCCESS;
                 } else { // 打开界面
                     NetworkHook.get().openScreen((ServerPlayer) player, lootSpawnerBlockEntity, (buf) -> {
                         buf.writeBlockPos(pos); // 传递方块的位置
                         buf.writeUtf(lootSpawnerBlockEntity.getGameId() != null ? lootSpawnerBlockEntity.getGameId().toString() : "");
                     });
-                    return InteractionResult.CONSUME;
+                    return ItemInteractionResult.CONSUME;
                 }
             }
         }
-        return InteractionResult.sidedSuccess(level.isClientSide);
+        // return ItemInteractionResult.PASS_TO_DEFAULT_BLOCK_INTERACTION;
+        // ↑似乎没什么区别，背景还是很黑
+        return ItemInteractionResult.CONSUME;
     }
 }
